refactor: enhance fingerprinting probes with robust error handling and descriptive documentation while removing unused web proxy resources